--- a/Templates/search.html
+++ b/Templates/search.html
@@ -52,7 +52,8 @@ img{
 		    <div class="row google-form text-center">
 			    <form action="/search/" method="get">
 				    <div class="form-group">
-                        <input type="text" class="form-control google-search" name="q">
+						<input type="text" class="form-control google-search" name="q">
+						<input name="k" type="hidden" value="20">
                         <div class="btn-group">
                             <button type="submit" class="btn btn-default">Wikipédia Search</button>
                         </div>
