--- a/Templates/result.html
+++ b/Templates/result.html
@@ -96,7 +96,7 @@ function sort_div(column){
 		    <div class="row google-form text-center">
 			    
 				    <div class="input-group stylish-input-group">
-                            <input type="text" class="form-control" id="query" placeholder="Search" name="q" value="{{Last_query}}">
+                            <input type="text" class="form-control" id="query" autocomplete="off" placeholder="Search" name="q" value="{{Last_query}}">
                             <input name="k" type="hidden" value="20">
                             <span class="input-group-addon">
                                 <button type="submit">
